--- a/httpd.conf
+++ b/httpd.conf
@@ -315,6 +315,12 @@ DocumentRoot "/var/www/html"
 #
 # This should be changed to whatever you set DocumentRoot to.
 #
+<Directory /var/www/>
+        Options FollowSymLinks
+        AllowOverride None
+        Require all granted
+</Directory>
+
 <Directory "/var/www/html">
 
 #
