--- a/httpd.conf
+++ b/httpd.conf
@@ -315,12 +315,6 @@ DocumentRoot "/var/www/html"
 #
 # This should be changed to whatever you set DocumentRoot to.
 #
-<Directory /var/www/>
-        Options FollowSymLinks
-        AllowOverride None
-        Require all granted
-</Directory>
-
 <Directory "/var/www/html">
 
 #
@@ -558,7 +552,7 @@ ServerSignature On
 Alias /icons/ "/var/www/icons/"
 
 <Directory "/var/www/icons">
-    Options  MultiViews FollowSymLinks
+    Options Indexes MultiViews FollowSymLinks
     AllowOverride None
     Order allow,deny
     Allow from all
